# aa-sdr-generator

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
config/: endpoints.py  environment.py  sdr_config.py
core/: auth.py  client.py  log_setup.py
exporters/: excel.py
models/adobe/: analytics.py  ims.py
tests/: conftest.py  test_auth_behavior.py  test_auth_logging.py  test_auth_pure.py  test_client_logging.py  test_excel_logging.py  test_excel_pure.py  test_log_setup.py  test_main.py  test_sdr_config.py
